# djangoapp

./: .env.prod.example  .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml
backend/: .vercelignore  build.py  pyproject.toml  requirements.txt
backend/core/: blob_storage.py  middleware.py  settings.py  wsgi.py
backend/habits/: admin.py  context_processors.py  forms.py  models.py  signals.py  urls.py  views.py
backend/habits/api/: serializers.py
backend/habits/services/: analytics.py
backend/habits/tests/: test_hour_distribution.py
backend/templates/: analytics.html  base.html  calendar.html  dashboard.html  habit_detail.html
backend/templates/includes/: add_habit_modal.html
