[project]
name = 'habithamster'
version = '0.1.0'
requires-python = '>=3.12'
# Mirror of requirements.txt (Vercel reads dependencies from pyproject.toml when
# present; requirements.txt is still used by the Docker dev container).
dependencies = [
    'asgiref==3.11.1',
    'Django==6.0.4',
    'django-environ==0.13.0',
    'djangorestframework==3.17.1',
    'psycopg2-binary==2.9.10',
    'sqlparse==0.5.5',
    'Pillow==11.0.0',
    'whitenoise==6.12.0',
]

[tool.setuptools]
py-modules = []

# Vercel deployment configuration.
# Vercel auto-detects Django via manage.py and reads WSGI_APPLICATION from
# settings.py. The build script seeds a SQLite DB so the deployed app has data
# (and an admin/admin superuser) on first request.
[tool.vercel]
entrypoint = 'core.wsgi:application'

[tool.vercel.scripts]
build = 'python build.py'

[tool.isort]
profile = 'black'
line_length = 120
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'core.pytest_settings'
addopts = '--new-first --failed-first --nomigrations -vv -x'
filterwarnings = ['ignore::RuntimeWarning', 'ignore::DeprecationWarning']

[tool.pyright]
reportUnknownMemberType = false